<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Money Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="EUR">EUR</string>
    <string name="Result">Result</string>
    <string name="convert">Convert</string>
    <string name="To">To:</string>
    <string name="hello_world" >Hey keep smiling</string>
    <string name="currency_prompt">Choose a currency</string>

    <string-array name="currency_arrays">
        <item>AUD</item>
        <item>BGN</item>
        <item>CZK</item>
        <item>GBP</item>
        <item>HUF</item>
        <item>PLN</item>
        <item>USD</item>
        <item>DKK</item>
        <item>HRK</item>
        <item>MXN</item>
        <item>RUB</item>
        <item>NZD</item>
    </string-array>

    <string name="title_activity_splash">SplashActivity</string>


</resources>