<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffe4e6e6">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/EUR"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignEnd="@+id/buttonConvert"
        android:autoText="false"
        android:textColor="#ff000000"
        android:textSize="25dp"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="25dp"
        android:layout_below="@+id/buttonConvert"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="68dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentEnd="true" />


    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:background="#ffa4a4a4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/currency_arrays"
        android:prompt="@string/currency_prompt"
        android:background="#aafffefc"
        android:longClickable="false"
        android:layoutMode="clipBounds"
        android:spinnerMode="dialog"
        android:layout_alignStart="@+id/editText1"
        android:layout_above="@+id/buttonConvert" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/To"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/spinner1"
        android:layout_alignParentStart="true" />


</RelativeLayout>
